--- a/voucher_assistant/frontend/public/manifest.json
+++ b/voucher_assistant/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Voucher Assistant",
-  "name": "AI Trợ Lý Voucher OneU",
+  "name": "AI Trợ Lý Voucher  ",
   "icons": [
     {
       "src": "favicon.ico",
