--- a/voucher_assistant/.env
+++ b/voucher_assistant/.env
@@ -1,4 +1,4 @@
-# Environment Configuration for OneU Voucher Assistant
+# Environment Configuration for Voucher Assistant
 
 # API Configuration
 API_HOST=0.0.0.0
@@ -7,7 +7,7 @@ DEBUG=true
 
 # Elasticsearch Configuration
 ELASTICSEARCH_URL=http://localhost:9200
-ELASTICSEARCH_INDEX=voucher_knowledge_base
+ELASTICSEARCH_INDEX=voucher_knowledge
 
 # Google Cloud Configuration
 GOOGLE_PROJECT_ID=your-gcp-project-id
@@ -18,7 +18,10 @@ GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/gcp-key.json
 # LLM Configuration
 #EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
 #EMBEDDING_DIMENSION=384
-EMBEDDING_MODEL=dangvantuan/vietnamese-embedding
+# EMBEDDING_MODEL=dangvantuan/vietnamese-embedding
+# EMBEDDING_DIMENSION=768
+
+EMBEDDING_MODEL=keepitreal/vietnamese-sbert
 EMBEDDING_DIMENSION=768
 
 # RAG Configuration
